# app/validators/order.ts
@@ -1,0 +1,12 @@
+import vine from '@vinejs/vine'
+
+export const createOrderValidator = vine.compile(
+  vine.object({
+    cocktails: vine.array(
+      vine.object({
+        id: vine.number().positive(),
+        quantity: vine.number().positive(),
+      })
+    ),
+  })
+)
