# doc/openapi.yaml
@@ -1,12 +1,14 @@
 openapi: 3.0.3
 info:
   title: Cocktails API
-  version: 0.2.0
+  version: 0.3.0
 tags:
   - name: Cocktails
     description: Everything about cocktails
   - name: Ingredients
     description: Everything about ingredients
+  - name: Orders
+    description: Everything about orders
   - name: Auth
     description: Everything about security
 paths:
@@ -460,6 +462,163 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Errors'
+  /orders:
+    get:
+      tags:
+        - Orders
+      summary: Get list of orders
+      operationId: ordersIndex
+      parameters:
+        - name: page
+          in: query
+          description: Allows you to set page and use pagination.
+          schema:
+            type: number
+            default: 1
+        - name: perPage
+          in: query
+          description: Allows you to set how many records are shown on the page.
+          schema:
+            type: number
+            default: 15
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Order'
+                  meta:
+                    $ref: '#/components/schemas/Meta'
+    post:
+      tags:
+        - Orders
+      summary: Create a new order
+      operationId: orderCreate
+      requestBody:
+        description: Order's attributes
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                cocktails:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        example: 1
+                      quantity:
+                        type: string
+                        example: '13'
+              required:
+                - name
+                - category
+                - intructions
+                - ingredients
+      responses:
+        '201':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '401':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '403':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '422':
+          description: Faiure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+  /orders/{id}:
+    get:
+      tags:
+        - Orders
+      summary: Get a specific order
+      operationId: orderShow
+      parameters:
+        - name: id
+          schema:
+            type: integer
+            example: 1
+          in: path
+          required: true
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '401':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '403':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '404':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+    delete:
+      tags:
+        - Orders
+      summary: Delete a specific order
+      operationId: orderlDelete
+      parameters:
+        - name: id
+          schema:
+            type: integer
+            example: 1
+          in: path
+          required: true
+      responses:
+        '204':
+          description: successful operation
+        '401':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '403':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
+        '404':
+          description: Failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Errors'
   /login:
     post:
       tags:
@@ -599,6 +758,34 @@ components:
           type: string
           nullable: true
           example: 'https://cocktails.solvro.pl/images/cocktails/mojito.png'
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 110
+        orderDate:
+          type: string
+          format: date-time
+          example: '2024-10-31T21:17:38.988Z'
+        cocktails:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderCocktail'
+    OrderCocktail:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 110
+        name:
+          type: string
+          example: 'Mojito'
+        alcoholic:
+          type: boolean
+          example: true
     Errors:
       type: object
       properties:
